name:                reflex-dom-semui
version:             0.1
license:             BSD3
synopsis:            A reflex-dom API for semantic-ui components
author:              Doug Beardsley
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src
  js-sources:
    -- lib/jquery.min.js,
    lib/semantic.min.js

  exposed-modules:
    Reflex.Dom.SemanticUI

  build-depends:
      base
    , containers
    , data-default
    , ghcjs-dom
    , mtl
    , reflex     >= 0.5 && < 0.6
    , reflex-dom >= 0.4 && < 0.5
    , text

  if impl(ghcjs)
    build-depends: ghcjs-base

  ghc-options: -Wall -fno-warn-unused-do-bind -fno-warn-orphans
  cpp-options: -D_GHCJS_ -DGHCJS_GC_INTERVAL=60000

  default-language:    Haskell2010

